[package]
name = "spae"
version = "0.1.0"
edition = "2021"

[dependencies]
ariadne = "0.4.1"
camino = "1.1.9"
clap = { version = "4.5.20", features = ["derive"] }
eyre = "0.6.12"
rustc-hash = "2.0.0"
steel-core = { git = "https://github.com/mattwparas/steel", version = "0.6.0" }
winnow = "0.6.20"

[dev-dependencies]
pretty_assertions = "1.4.1"
